--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -11,7 +11,10 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v2
-
+    
+    - name: Install Pygments
+      run: pip install Pygments
+    
     - name: Generate Markdown files
       run: |
         mkdir -p docs
