--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -12,13 +12,13 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
     
-    - name: Install Pygments
-      run: pip install Pygments
+    - name: Install highlight
+      run: sudo apt-get install -y highlight
     
     - name: Generate Markdown files
       run: |
         mkdir -p docs
-        find . -name '*.cpp' -type f -exec sh -c 'pygmentize -f markdown -o "docs/${1%.cpp}.md" "{}"' _ {} \;
+        find . -name '*.cpp' -type f -exec sh -c 'highlight -O html -s monokai "{}" > "docs/${1%.cpp}.md"' _ {} \;
 
     - name: Create index file
       run: echo "- [Home](README.md)" > docs/_index.md
