--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -38,4 +38,4 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git add .
           git commit -m "Deploy website"
-          git push --force "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git" main:gh-pages
+          git push
