--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -38,4 +38,7 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git add .
           git commit -m "Deploy website"
+          git fetch
+          git rebase origin/gh-pages
+          git rebase --continue
           git push --force origin gh-pages
