--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -39,4 +39,4 @@ jobs:
           git add .
           git commit -m "Deploy website"
           git fetch
-          git push --force origin gh-pages
+          git push --force origin deploy
