--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -31,5 +31,6 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git add .
           git commit -m "Deploy website"
+          git branch
           git fetch
           git push --force origin gh-pages
