--- a/.github/workflows/website.yml
+++ b/.github/workflows/website.yml
@@ -22,7 +22,10 @@ jobs:
         run: |
           gem install bundler
           bundle install
-          
+         
+      - name: Branch
+        run: git branch
+         
       - name: Build and deploy
         run: |
           bundle exec jekyll build --destination ./_site
@@ -31,6 +34,5 @@ jobs:
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git add .
           git commit -m "Deploy website"
-          git branch
           git fetch
           git push --force origin gh-pages
