--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,5 +25,5 @@ jobs:
           git config user.name "${{ github.actor }}"
           git config user.email "${{ github.actor }}@users.noreply.github.com"
           git add README.md
-          git commit -m "Update README with repository content" || echo "No changes to commit"
+          git commit -m "README" || echo "No changes to commit"
           git push
